--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
 
 out/
+
+Battleboats-master-test/src/battleboats/.idea/battleboats.iml
+
+Battleboats-master-test/src/battleboats/.idea/encodings.xml
+
+Battleboats-master-test/src/battleboats/.idea/misc.xml
+
+Battleboats-master-test/src/battleboats/.idea/modules.xml
+
+Battleboats-master-test/src/battleboats/.idea/vcs.xml
+
+Battleboats-master-test/src/battleboats/.idea/workspace.xml
+
+BattleBoats-Scenes/.idea/BattleBoats-Scenes.iml
+
+BattleBoats-Scenes/.idea/encodings.xml
+
+BattleBoats-Scenes/.idea/misc.xml
+
+BattleBoats-Scenes/.idea/modules.xml
+
+BattleBoats-Scenes/.idea/vcs.xml
