--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 
 out/
+
+BattleBoats-Scenes/.idea/BattleBoats-Scenes.iml
+
+BattleBoats-Scenes/.idea/encodings.xml
+
+BattleBoats-Scenes/.idea/misc.xml
+
+BattleBoats-Scenes/.idea/modules.xml
+
+BattleBoats-Scenes/.idea/vcs.xml
+
+BattleBoats-Scenes/.idea/workspace.xml
