--- a/build.xml
+++ b/build.xml
@@ -11,6 +11,9 @@
                         BattleBoats-Scenes/src/Scenes;"
                 destdir="build/classes"
                 includeantruntime="false"/>
+        <taskdef resource="com/sun/javafx/tools/ant/antlib.xml"
+        uri="javafx:com.sun.javafx.tools.ant"
+        classpath="${JAVA_HOME}/lib/ant-javafx.jar"/>
     </target>
 
     <target name="jar">
