ignore user info

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ BattleBoats-Scenes/.idea/modules.xml
 BattleBoats-Scenes/.idea/vcs.xml
 
 BattleBoats-Scenes/src/BattleBoats-Scenes.iml
+
+BattleBoats-Scenes/user_info.txt
